<resources>
    <string name="app_name">CompassMobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reset_barcode">Reset Barcode</string>
    <string name="site">Site</string>
    <string name="property">Property</string>
    <string name="all">All</string>
    <string name="task_ref.">Task ref:</string>
    <string name="task_name.">Task name:</string>
    <string name="location.">Location:</string>
    <string name="type.">Type:</string>
    <string name="asset.">Asset:</string>
    <string name="date_due.">Date due:</string>
    <string name="sort">Sort</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="task">Task</string>
    <string name="frequency">Frequency</string>
    <string name="period">Period</string>
    <string name="my_tasks">My Tasks</string>
    <string name="asset_group">Asset Group</string>
    <string name="task_name">Task Name</string>
    <string name="asset_type">Asset Type</string>
    <string name="area">Area</string>
    <string name="asset_number">Asset Number</string>
    <string name="please_select">Please Select</string>
    <string name="not_applicable">Not Applicable</string>
    <string-array name="date_ranges">
        <item>Due Today</item>
        <item>Due This Week</item>
        <item>Due This Month</item>
        <item>Due By the End of Next Month</item>
        <item>All</item>
    </string-array>
    <string name="done">Done</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="server_name">Server Name</string>
    <string name="login">Login</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="pairing">Pairing</string>
    <string name="synchronisation">Synchronisation</string>
    <string name="upload_task">Upload Task</string>
    <string name="synchronise_data">Synchronise Data</string>
    <string name="reset_synchronisation_dates">Reset Synchronisation Dates</string>
    <string name="reset_task_data">Reset Task Data</string>
    <string name="reset_all_data">Reset All Data</string>
    <string name="processing..">Processing...</string>
    <string name="please_wait..">Please Wait..</string>
    <string name="operatives_credentials_dont_exist_locally">Operative\'s credentials don\'t exist locally</string>
    <string name="tasks">Tasks</string>
    <string name="remedial_tasks_not_supported">Remedial Tasks are not currently supported.</string>
    <string name="complete_required_fields">Please complete the required fields.</string>
    <string name="task_templateid_null">TaskTemplateId is null</string>
    <string name="connected_device">Connected Device</string>
    <string name="please_select_your_device_from_app_settings">Please select your Blueooth device from App\'s Settings</string>
    <string name="no_bonded_devices">No Bonded Bluetooth Devices</string>
    <string name="bluetooth_connection_issue">Bluetooth Connection Issue</string>
    <string name="bluetooth_activated">Bluetooth Activated</string>
    <string name="bluetooth_not_activated">Unable to activate Nluetooth,Please try to activate it manually.</string>
    <string name="no_active_bluetherm_devices">"No Active bluetherm devices"</string>
    <string name="unsupported_bluetooth">This Device doesn\'t support Bluetooth</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to log out?</string>
    <string name="are_you_sure_you_want_to_reset_sync_dates">Are you sure you want to reset the Synchronisation Dates?</string>
    <string name="are_you_sure_you_want_to_reset_everything">Are you sure you want to reset everything?</string>
    <string name="are_you_absolutely_sure_you_want_to_reset_everything">Are you absolutely sure that you want to reset everything?</string>
    <string name="are_you_sure_you_want_to_reset_the_tasks">Are you sure you want to reset the Tasks?</string>
    <string name="add_task">Add Task</string>
    <string name="all_fields_must_be_completed">All fields must be completed.</string>
    <string name="filter">Filter</string>
    <string name="searching_for_device">Searching for device</string>
    <string name="error_connecting_to_device">Error connecting to device</string>
    <string name="exit_current_task">Are you sure you want to exit the current task?</string>
    <string name="incorrect_credentials">Incorrect credentials</string>

</resources>
