<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_sync_white_48dp"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings_white_48dp"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reset_barcode"
        android:orderInCategory="100"
        android:title="@string/action_reset_barcode"
        app:showAsAction="ifRoom" />

</menu>
