<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.hydrop.compassmobile.Activities.FilterActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/sort"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/dateRadioButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/locationRadioButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/typeRadioButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/taskRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task"
                android:checked="false"/>
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/centerShim1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/site"/>

            <View
                android:id="@+id/centerShim1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/siteSpinner"
                android:layout_toEndOf="@id/centerShim1"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/centerShim2"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/property"/>
            <View
                android:id="@+id/centerShim2"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/propertySpinner"
                android:layout_toEndOf="@id/centerShim2"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/centerShim3"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/frequency"/>
            <View
                android:id="@+id/centerShim3"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/frequencySpinner"
                android:layout_toEndOf="@id/centerShim3"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/centerShim4"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/period"/>

            <View
                android:id="@+id/centerShim4"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/periodSpinner"
                android:layout_toEndOf="@id/centerShim4"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/switchControl"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/my_tasks"/>
            <Switch
                android:id="@+id/switchControl"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/centerShim5"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/asset_group"/>

            <View
                android:id="@+id/centerShim5"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/assetGroupSpinner"
                android:layout_toEndOf="@id/centerShim5"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/centerShim6"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/task_name"/>

            <View
                android:id="@+id/centerShim6"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/taskNameSpinner"
                android:layout_toEndOf="@+id/centerShim6"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/centerShim7"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/asset_type"/>
            <View
                android:id="@+id/centerShim7"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/assetTypeSpinner"
                android:layout_toEndOf="@+id/centerShim7"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/centerShim8"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/area"/>

            <View
                android:id="@+id/centerShim8"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/areaSpinner"
                android:layout_toEndOf="@id/centerShim8"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/centerShim9"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/location"/>

            <View
                android:id="@+id/centerShim9"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/locationSpinner"
                android:layout_toEndOf="@id/centerShim9"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinners_top_margin">

            <TextView
                android:layout_toStartOf="@+id/centerShim10"
                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/asset_number"/>
            <View
                android:id="@+id/centerShim10"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/assetNumberSpinner"
                android:layout_toEndOf="@+id/centerShim10"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>